[gd_scene load_steps=10 format=3 uid="uid://c4rkfw6doa5th"]

[ext_resource type="Script" path="res://Object.gd" id="1_8la0r"]
[ext_resource type="Texture2D" uid="uid://njvyvfje7uya" path="res://Assets/TCube2.png" id="2_kubu7"]
[ext_resource type="Texture2D" uid="uid://bnqpxqhteksbc" path="res://Assets/TOre1.png" id="2_yoj62"]
[ext_resource type="Texture2D" uid="uid://c0x6o3a5vn8ar" path="res://Assets/BombAnim.png" id="3_c1wpn"]
[ext_resource type="AudioStream" uid="uid://ckied8a8o8ywc" path="res://Assets/metal-hit-12-193278.mp3" id="3_dmobu"]
[ext_resource type="AudioStream" uid="uid://bop7udmiyi2xe" path="res://Assets/Explosion.wav" id="3_ofwi2"]

[sub_resource type="Animation" id="Animation_b4k38"]
resource_name = "Exlpode"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.75, 0.8, 0.8001, 0.85, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 7, 8, 9, 0, 10, 11, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 2.92817, 0.105112),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(8, 8), Vector2(7, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gvyft"]
_data = {
"Exlpode": SubResource("Animation_b4k38")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vas1b"]

[node name="ObjectBody" type="Node2D"]
z_index = 10
scale = Vector2(2, 2)
script = ExtResource("1_8la0r")
ObjSprite = ExtResource("2_yoj62")
BombSprite = ExtResource("3_c1wpn")

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ofwi2")
volume_db = 3.748

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_gvyft")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 8
texture = ExtResource("3_c1wpn")

[node name="Area2D" type="Area2D" parent="."]
z_index = 10
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 10
shape = SubResource("RectangleShape2D_vas1b")

[node name="Clunk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dmobu")
volume_db = -17.669
pitch_scale = 0.82

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.0392157, 0.0392157, 0.0392157, 0.501961)
z_index = 7
position = Vector2(0, 4)
scale = Vector2(1, 0.5)
texture = ExtResource("2_kubu7")

[node name="BombTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="BombTimer" to="." method="_on_bomb_timer_timeout"]
